# Clinical_Risk_Prediction

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  mlflow.db  pyproject.toml
.claude/: settings.local.json
.claude/agents/: backend-engineer.md  data-engineer.md  devops-agent.md  ml-engineer.md  pyTorch-agent.md  qa-agent.md  team-lead.md
.github/workflows/: ci.yml
docs/: architecture.md  model-card.md
notebooks/: 01_eda.ipynb
scripts/: start.sh
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/api/routers/: predict.py
src/data/: __init__.py  download.py  features.py  pipeline.py  preprocess.py
src/models/: __init__.py  base.py  logistic_model.py  random_forest_model.py  registry.py  sklearn_model.py  torch_model.py
src/training/: __init__.py  evaluate.py  train.py
tests/: __init__.py  test_data.py
tests/api/: test_health.py
tests/data/: test_preprocess.py
tests/models/: test_sklearn_model.py
tests/training/: __init__.py
